force-app/main/default/objects/ObjectC__c/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <description>Contact</description>
    <inlineHelpText>Contact phone number</inlineHelpText>
    <label>Contact Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>