force-app/main/default/objects/ObjectC__c/fields/First_Modified__c.field-meta.xml
<CustomField>
    <fullName>First_Modified__c</fullName>
    <description>Second Modified Field for testing</description>
    <inlineHelpText>First Modified</inlineHelpText>
    <label>First Modified</label>
    <length>100</length>
    <type>Text</type>
</CustomField>