force-app/main/default/objects/ObjectC__c/fields/Return_Rate__c.field-meta.xml
<CustomField>
    <fullName>Return_Rate__c</fullName>
    <description>Return Rate</description>
    <inlineHelpText>Return Rate</inlineHelpText>
    <label>Return Rate</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>