force-app/main/default/objects/ObjectC__c/validationRules/myTestField_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>myTestField_not_null</fullName>
    <active>true</active>
    <description>myTestField not null</description>
    <errorConditionFormula>AND(myTestField__c == null)</errorConditionFormula>
    <errorMessage>This field is required!</errorMessage>
</ValidationRule>