force-app/main/default/objects/ObjectC__c/listViews/Air_Group_ObjectA.listView-meta.xml
<ListView>
    <fullName>Air_Group_ObjectA</fullName>
    <filterScope>Queue</filterScope>
    <label>Air Group</label>
    <queue>Air_Group</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>